[fix] add better contrast color

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,10 @@
 :root {
     --primary-color: #2d3748;
     --text-color: #4a5568;
+    --secondary-text-color: #fff;
     --border-color: #e2e8f0;
     --background-color: #ffffff;
-    --accent-color: #f56565;
+    --accent-color: #4E55D4;
 }
 
 * {
@@ -111,27 +112,27 @@ h2 {
 .schedule-meeting {
     text-align: center;
     margin-bottom: 2rem;
+    color: var(--secondary-text-color);
     background-color: var(--accent-color);
     padding: 1rem;
-    color: white;
     border-radius: 0.5rem;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
 .schedule-meeting h2 {
-    color: white;
+    color: var(--secondary-text-color);
+    border-bottom: none;
     margin-bottom: 0.5rem;
 }
 
 .schedule-meeting p {
     margin-bottom: 1rem;
-    color: white;
 }
 
 .schedule-button {
     display: inline-block;
     padding: 0.5rem 1rem;
-    background-color: white;
+    background-color: var(--secondary-text-color);
     color: var(--accent-color);
     border-radius: 0.5rem;
     text-decoration: none;
